# stocksense

./: .gitignore  CLAUDE.md  LAUNCHGUIDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  publish.yml
docs/: milestones.md
src/mcp_finance/: __init__.py  __main__.py  server.py
src/mcp_finance/data/: cache.py  edgar.py  market.py  technicals.py
src/mcp_finance/tools/: analyze.py  company_profile.py  compare.py  dividends.py  earnings.py  events.py  financials.py  insider_trades.py  price_history.py  sec_filings.py  technicals.py  validation.py
src/stocksense/: __init__.py  __main__.py  server.py
src/stocksense/data/: cache.py  edgar.py  market.py  technicals.py
src/stocksense/tools/: analyze.py  company_profile.py  compare.py  dividends.py  earnings.py  events.py  financials.py  insider_trades.py  price_history.py  sec_filings.py  technicals.py
tests/: test_analyze.py  test_cache.py  test_company_profile.py  test_compare.py  test_dividends.py  test_earnings.py  test_edgar.py  test_events.py  test_financials.py  test_insider_trades.py  test_price_history.py  test_sec_filings.py  test_technicals.py  test_validation.py
