[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-finance-server"
version = "0.1.0"
description = "MCP server providing AI agents with access to financial data"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "yfinance",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
